@@ -3,6 +3,11 @@ update-manager (1:0.101.0) UNRELEASED; urgency=low
   [ Brian Murray ]
   * UpdateManagerHildon/UpdateManagerHildon.py:
      - wording fix "will be" to "are being" (LP: #338943)
+  
+  [ Michael Vogt ]
+  * UpdateManager/UpdateManagerText.py:
+    - fix crash in changelog display (LP: #341577)
+    - support NEWS.Debian from the server as well
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Mar 2009 16:58:12 +0100
 
